[workspace]
resolver = "2"
members = [
    "characters",
    "input_parsing",
    "lib",
    "main",
    "player_state",
    "foundation",
]

[profile.dev]
debug = 1
lto = "off"

[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
bevy = "0.15"
bevy-inspector-egui = "0.28"
bevy_matchbox = { git = "https://github.com/haihala/matchbox.git", features = [
    "ggrs",
] }
bevy_ggrs = { git = "https://github.com/johanhelsing/bevy_ggrs.git", branch = "bevy-0.15" }

rand = "0.8"
strum = "0.26"
strum_macros = "0.26"
clap = { version = "4.5", features = ["derive"] }
