[workspace]
resolver = "2"
members = [
  "characters",
  "input_parsing",
  "lib",
  "main",
  "player_state",
  "foundation",
]

[profile.dev]
debug = 1
lto = "off"

[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
bevy = "0.15"
bevy-inspector-egui = "0.28"
bevy_matchbox = { version = "0.11", features = ["ggrs"] }
bevy_ggrs = "0.17"

rand = "0.8"
strum = "0.26"
strum_macros = "0.26"
clap = { version = "4.5", features = ["derive"] }
