[package]
name = "integration_tests"
version = "0.1.0"
edition = "2021"
authors = ["Eero Häihälä <eero.haihala@gmail.com>"]

[dependencies]
bevy = "0.6.1"

constants = { path = "../constants" }
input_parsing = { path = "../input_parsing" }
moves = { path = "../moves" }
whoops-all-grapplers-lib = { path = "../lib" }
types = { path = "../types" }
time = { path = "../time" }
