[package]
name = "oops-all-grapplers-lib"
version = "0.1.0"
authors = ["Eero Häihälä <eero.haihala@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5.0"
strum = "0.21"
strum_macros = "0.21"
num = "0.4.0"
bevy-inspector-egui = "0.6.1"

input_parsing = { path = "../input_parsing" }
moves = { path = "../moves" }