[package]
name = "whoops-all-grapplers-lib"
version = "0.1.0"
edition = "2021"
authors = ["Eero Häihälä <eero.haihala@gmail.com>"]

[dependencies]
bevy = "0.6.1"
bevy-inspector-egui = "0.8.2"

constants = { path = "../constants" }
input_parsing = { path = "../input_parsing" }
kits = { path = "../kits" }
player_state = { path = "../player_state" }
types = { path = "../types" }
time = { path = "../time" }
