[package]
name = "whoops-all-grapplers"
version = "0.1.0"
authors = ["Eero Häihälä <eero.haihala@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5.0"

whoops-all-grapplers-lib = { path = "../lib" }
input_parsing = { path = "../input_parsing" }
