[package]
name = "player_state"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy-inspector-egui = "0.6.1"
bevy = "0.5.0"

constants = { path = "../constants" }
moves = { path = "../moves" }
types = { path = "../types" }
