[package]
name = "characters"
version = "0.1.0"
edition = "2021"
authors = ["Eero Häihälä <eero.haihala@gmail.com>"]

[dependencies]
bevy = "0.8.0"
bevy-inspector-egui = "0.12.1"
map-macro = "0.2.3"

constants = { path = "../constants" }
input_parsing = { path = "../input_parsing"}
types = { path = "../types" }
