[package]
name = "characters"
version = "0.1.0"
edition = "2021"
authors = ["Eero Häihälä <eero.haihala@gmail.com>"]

[dependencies]
bevy = { workspace = true }
bevy-inspector-egui = { workspace = true }
map-macro = { workspace = true }

constants = { path = "../constants" }
input_parsing = { path = "../input_parsing"}
types = { path = "../types" }
