[package]
name = "input_parsing"
version = "0.1.0"
edition = "2021"
authors = ["Eero Häihälä <eero.haihala@gmail.com>"]

[dependencies]
bevy = "0.7.0"
bevy-inspector-egui = "0.11.0"
map-macro = "0.2.2"

characters = { path = "../characters" }
time = { path = "../time" }
types = { path = "../types" }
