[package]
name = "input_parsing"
version = "0.1.0"
edition = "2021"
authors = ["Eero Häihälä <eero.haihala@gmail.com>"]

[dependencies]
bevy = { workspace = true }
bevy-inspector-egui = { workspace = true }
map-macro = { workspace = true }

time = { path = "../time" }
wag_core = { path = "../wag_core" }
