[package]
name = "integration_tests"
version = "0.1.0"
edition = "2021"
authors = ["Eero Häihälä <eero.haihala@gmail.com>"]

[dependencies]
bevy = { workspace = true }
bevy_hanabi  = { workspace = true }

input_parsing = { path = "../input_parsing" }
characters = { path = "../characters" }
whoops-all-grapplers-lib = { path = "../lib" }
core = { path = "../core" }
time = { path = "../time" }
