[package]
name = "integration_tests"
version = "0.1.0"
edition = "2021"
authors = ["Eero Häihälä <eero.haihala@gmail.com>"]

[dependencies]
bevy = { workspace = true }

input_parsing = { path = "../input_parsing" }
characters = { path = "../characters" }
whoops-all-grapplers-lib = { path = "../lib" }
wag_core = { path = "../wag_core" }
time = { path = "../time" }
