[package]
name = "whoops-all-grapplers-lib"
version = "0.1.0"
edition = "2021"
authors = ["Eero Häihälä <eero.haihala@gmail.com>"]

[dependencies]
bevy = { workspace = true, features=["mp3"]}
bevy_hanabi  = { workspace = true }
bevy-inspector-egui = { workspace = true }
rand = { workspace = true }
strum = { workspace = true }
map-macro = { workspace = true }

input_parsing = { path = "../input_parsing" }
characters = { path = "../characters" }
player_state = { path = "../player_state" }
wag_core = { path = "../wag_core" }
wag_args = { path = "../wag_args" }
