[package]
name = "whoops-all-grapplers-lib"
version = "0.1.0"
edition = "2021"
authors = ["Eero Häihälä <eero.haihala@gmail.com>"]

[dependencies]
bevy = { workspace = true, features = ["mp3"] }
bevy-inspector-egui = { workspace = true }
bevy_matchbox = { workspace = true }
bevy_ggrs = { workspace = true }
rand = { workspace = true }
strum = { workspace = true }

input_parsing = { path = "../input_parsing" }
characters = { path = "../characters" }
player_state = { path = "../player_state" }
foundation = { path = "../foundation" }
