[package]
name = "player_state"
version = "0.1.0"
edition = "2021"
authors = ["Eero Häihälä <eero.haihala@gmail.com>"]

[dependencies]
bevy = { workspace = true }
bevy-inspector-egui = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }

characters = { path = "../characters" }
types = { path = "../types" }
