[package]
name = "player_state"
version = "0.1.0"
edition = "2021"
authors = ["Eero Häihälä <eero.haihala@gmail.com>"]

[dependencies]
bevy = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }

characters = { path = "../characters" }
foundation = { path = "../foundation" }
input_parsing = { path = "../input_parsing" }
